--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -74,6 +74,7 @@ a{color:inherit;text-decoration:none}
 	position:absolute;
 	padding:50px 50px 0px 60px;
 	background:rgba(187, 30, 30, 0.863);
+	color:grey;
 }
 .login-html .sign-in-htm,
 .login-html .sign-up-htm{
@@ -117,6 +118,7 @@ a{color:inherit;text-decoration:none}
 }
 .login-form .group{
 	margin-bottom:15px;
+	color:grey;
 }
 .login-form .group .label,
 .login-form .group .input,
