--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -1,6 +1,6 @@
 body{
 	height: 100vh;
-    background: linear-gradient(135deg, #f28c6d, #e62727);
+    background: linear-gradient(135deg, #ff5a3c, #eb4930, #ee695a,#fa8560, #fcb185, #ffddaa);
     overflow: hidden;
     display: flex;
     justify-content: center;
@@ -73,8 +73,8 @@ a{color:inherit;text-decoration:none}
 	height:100%;
 	position:absolute;
 	padding:50px 50px 0px 60px;
-	background:rgba(187, 30, 30, 0.863);
-	color:#AAAAAA;
+	background:rgba(226, 94, 33, 0.986);
+	color:#000000;
 }
 .login-html .sign-in-htm,
 .login-html .sign-up-htm{
@@ -107,8 +107,8 @@ a{color:inherit;text-decoration:none}
 }
 .login-html .sign-in:checked + .tab,
 .login-html .sign-up:checked + .tab{
-	color:#fff;
-	border-color:#ee1111;
+	color:#000000;
+	border-color:#ad2424;
 }
 .login-form{
 	min-height:345px;
@@ -118,13 +118,13 @@ a{color:inherit;text-decoration:none}
 }
 .login-form .group{
 	margin-bottom:15px;
-	color:#AAAAAA;
+	color:#000000;
 }
 .login-form .group .label,
 .login-form .group .input,
 .login-form .group .button{
 	width:100%;
-	color:#fff;
+	color:#000000;
 	display:block;
 }
 .login-form .group .input,
@@ -142,7 +142,7 @@ a{color:inherit;text-decoration:none}
 	font-size:12px;
 }
 .login-form .group .button{
-	background:#f02004;
+	background:#e7412b;
 }
 .login-form .group label .icon{
 	width:15px;
