--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 body{
 	height: 100vh;
-    background: linear-gradient(135deg, #f72611,#faa72b);
+    background: linear-gradient(135deg, #ff5c4d,#fcb64f);
    
 }
 h1{
