--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -108,7 +108,7 @@ a{color:inherit;text-decoration:none}
 .login-html .sign-in:checked + .tab,
 .login-html .sign-up:checked + .tab{
 	color:#000000;
-	border-color:#ad2424;
+	border-color:#726e6e;
 }
 .login-form{
 	min-height:345px;
@@ -138,7 +138,7 @@ a{color:inherit;text-decoration:none}
 	-webkit-text-security:circle;
 }
 .login-form .group .label{
-	color:#aaa;
+	color:#000000;
 	font-size:12px;
 }
 .login-form .group .button{
@@ -194,7 +194,7 @@ a{color:inherit;text-decoration:none}
 .hr{
 	height:2px;
 	margin:60px 0 50px 0;
-	background:rgba(255,255,255,.2);
+	background:rgba(255, 255, 255, 0.1);
 }
 .foot-lnk{
 	text-align:center;
