--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 body{
 	height: 100vh;
-    background: linear-gradient(135deg, #ff5c4d,#fcb64f);
+    background: linear-gradient(135deg, #ff5a3c, #eb4930, #ee695a,#fa8560, #fcb185, #ffddaa);
    
 }
 h1{
