--- a/public/css/verificationstyle.css
+++ b/public/css/verificationstyle.css
@@ -1,36 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="<?php echo base_url("/css/defaultstyle.css");?>"> 
-    <title>Document</title>
-</head>
-<body>
-
-    <div class="circulo"></div>
-    <div class="circulo"></div>
-    <div class="circulo"></div>
-    <div class="circulo"></div>
-    
-    
-    <div class="form-container">
-    <form action="<?php echo base_url("/change");?> " method="post">
-    <h1>Digite su nueva contraseña</h1>
-        <div class="mb-3">
-
-        <span class="textos">Ingrese nueva contraseña</span><input type="password" name="password" required>
-
-        <span class="textos">Confirme su contraseña</span><input type="password" name="pw-confirm"required>
-
-        <input type="submit" value="Confirmar">
-
-        </div>
-
-    </form>
-    </div>
-
-    <style>
 body {
     display: flex;
     justify-content: center;
@@ -50,7 +17,7 @@ body {
     border: 2px solid #ff9999; /* Borde suave */
 }
 
-.mb-3 input[type="password"] {
+.mb-3 input[type="text"] {
     width: 100%; /* Ocupa el ancho completo */
     padding: 14px; /* Más espaciado interno */
     margin: 15px 0; /* Mayor espaciado entre elementos */
@@ -63,7 +30,7 @@ body {
     color: #333; /* Color del texto */
 }
 
-.mb-3 input[type="password"]:focus {
+.mb-3 input[type="text"]:focus {
     border-color: #888; /* Cambio de color de borde al enfocar */
     outline: none; /* Quitar borde por defecto */
 }
@@ -97,8 +64,3 @@ h1 {
     text-align: center;
     
 }
-</style>
-
-
-</body>
-</html>
