--- a/public/css/userinfostyle.css
+++ b/public/css/userinfostyle.css
@@ -21,12 +21,12 @@ body {
     .container{
         max-width: 100%;
         max-height: 100vh; /* Altura máxima no mayor al 100% del viewport */
-        text-align: justify;
+        text-align: left;
         background: rgba(211, 64, 64, 0.849);; /* Fondo blanco rojizo */
         padding: 40px; /* Más padding para un diseño espacioso */
         border-radius: 12px; /* Bordes más redondeados */
         box-shadow: 0 12px 30px rgba(0, 0, 0, 0.3); /* Sombra más pronunciada */
-        width: 700px; /* Ajuste del ancho */
+        width: 850px; /* Ajuste del ancho */
         border: 2px solid #ff9999; /* Borde suave */
         font-size: 18px;
     }
