--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -1,6 +1,6 @@
 body{
 	height: 100vh;
-    background: linear-gradient(135deg, #ff5a3c, #eb4930, #ee695a,#fa8560, #fcb185, #ffddaa);
+	background: linear-gradient(135deg, #2C3E50, #4CA1AF);
     overflow: hidden;
     display: flex;
     justify-content: center;
@@ -73,7 +73,7 @@ a{color:inherit;text-decoration:none}
 	height:100%;
 	position:absolute;
 	padding:50px 50px 0px 60px;
-	background:rgba(211, 64, 64, 0.849);
+	background:#4CA1AF;
 	color:#000000;
 }
 .login-html .sign-in-htm,
@@ -142,7 +142,8 @@ a{color:inherit;text-decoration:none}
 	font-size:12px;
 }
 .login-form .group .button{
-	background:#e7412b;
+	background:#2C3E50;
+	color: #fff;
 }
 .login-form .group label .icon{
 	width:15px;
@@ -150,7 +151,7 @@ a{color:inherit;text-decoration:none}
 	border-radius:2px;
 	position:relative;
 	display:inline-block;
-	background:rgba(255,255,255,.1);
+	background:#ffffff1a;
 }
 .login-form .group label .icon:before,
 .login-form .group label .icon:after{
@@ -194,7 +195,7 @@ a{color:inherit;text-decoration:none}
 .hr{
 	height:2px;
 	margin:60px 0 50px 0;
-	background:rgba(255, 255, 255, 0.1);
+	background:#2C3E50;
 }
 .foot-lnk{
 	text-align:center;
