--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,60 @@
-body{
-	height: 100vh;
-    background: linear-gradient(135deg, #6A82FB, #FC5C7D);
-   
+.button2 {
+    margin: 2px;
+    width: 9em;
+    height: 3em;
+    border-radius: 30em;
+    font-size: 15px;
+    font-family: inherit;
+    border: none;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+    color: #FFFFFF; /* Blanco para el texto */
+    background: #2C3E50; /* Azul marino oscuro */
+    box-shadow: 1px 1px 4px #c5c5c5, 0px 0px 3px #ffffff;
 }
-h1{
-    color: rgb(0, 0, 0);
+.button2::before {
+    content: '';
+    width: 0;
+    height: 3em;
+    border-radius: 30em;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-image: linear-gradient(to right, #2980B9 0%, #4CA1AF 100%); /* Azul profundo a azul petróleo */
+    transition: .5s ease;
+    display: block;
+    z-index: -1;
 }
-p{
-    color: hsl(0, 0%, 0%);
+  
+  .button2:hover::before {
+   width: 9em;
+  }
+
+  h1, h2 {
+    color: #ebebeb; /* Azul marino oscuro */
+}
+
+p {
+    color: #c2c4c2; /* Gris carbón */
+}
+  body {
+    height: 100vh;
+    background: linear-gradient(135deg, #2C3E50, #4CA1AF); /* Azul marino a azul petróleo */
+    color: #333333; /* Gris carbón para el texto */
+}
+
+/* Barra de navegación */
+nav.navbar {
+    background: linear-gradient(135deg, #0F2027, #203A43, #2C5364); /* Negro a azul oscuro */
+}
+
+/* Links de navegación */
+.navbar .nav-link {
+    color: #BDC3C7; /* Gris claro */
+}
+
+.navbar .nav-link:hover {
+    color: #2980B9; /* Azul profundo */
 }
 
