--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@
     width: 9em;
     height: 3em;
     border-radius: 30em;
-    font-size: 15px;
+    font-size: 20px;
     font-family: inherit;
     border: none;
     position: relative;
@@ -31,8 +31,21 @@
    width: 9em;
   }
 
+#esp{
+    margin:15px;
+}
+ul li{
+    list-style: none;
+}
+
   h1, h2 {
-    color: #ebebeb; /* Azul marino oscuro */
+    color: #ebebeb;
+    text-align: center; /* Azul marino oscuro */
+}
+
+h1{
+    font-size: 60px;
+    padding: 30px;
 }
 
 p {
@@ -57,4 +70,49 @@ nav.navbar {
 .navbar .nav-link:hover {
     color: #2980B9; /* Azul profundo */
 }
+
+.circulo {
+    position: absolute;
+    border-radius: 50%;
+    background: rgba(255, 255, 255, 0.2);
+    animation: flotando 10s infinite ease-in-out;
+}
+
+.circulo:nth-child(1) {
+    width: 200px;
+    height: 200px;
+    top: 20%;
+    left: 10%;
+    animation-delay: 0s;
+}
+
+.circulo:nth-child(2) {
+    width: 150px;
+    height: 150px;
+    top: 70%;
+    left: 30%;
+    animation-delay: 2s;
+}
+
+.circulo:nth-child(3) {
+    width: 300px;
+    height: 300px;
+    top: 40%;
+    right: 10%;
+    animation-delay: 4s;
+}
+
+.circulo:nth-child(4) {
+    width: 100px;
+    height: 100px;
+    bottom: 15%;
+    right: 40%;
+    animation-delay: 6s;
+}
+@keyframes flotando{0%, 100% {
+    transform: translateY(0) translateX(0);
+}
+50% {
+    transform: translateY(-50px) translateX(50px);
+}}
 
