--- a/public/css/airstyle.css
+++ b/public/css/airstyle.css
@@ -1,12 +1,26 @@
 body {
+    background: linear-gradient(135deg, #2C3E50, #4CA1AF); /* Azul marino a azul petróleo */
+    color: #333333;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100vh; /* Altura completa de la ventana */
     margin: 0;
-    background: linear-gradient(135deg, #2C3E50, #4CA1AF);
     font-family: Arial, sans-serif;
+    background-color: #f3f3f3; /* Color de fondo suave */
 }
+nav.navbar {
+    background: linear-gradient(135deg, #0F2027, #203A43, #2C5364); /* Negro a azul oscuro */
+}
+
+/* Links de navegación */
+.navbar .nav-link {
+    color: #BDC3C7; /* Gris claro */
+}
+
+.navbar .nav-link:hover {
+    color: #2980B9; /* Azul profundo */
+}   
 .control-remoto {
     width: 200px;
     height: 450px;
@@ -17,7 +31,7 @@ body {
 }
 .pantalla {
     width: 100%;
-    height: 30px;
+    height: 40px;
     background-color: #333;
     color: #fff;
     text-align: center;
@@ -122,7 +136,7 @@ body {
     display: inline-block;
 }
 .boton-direc{
-    width: 60px;
+    width: 90px;
     height: 30px;
     margin: 5px;
     background-color: #ddd;
@@ -134,7 +148,7 @@ body {
     cursor: pointer;
     border: 1px solid #aaa;
     display: inline-block;
-    translate: 65px;
+    translate: 30px;
 }
 
 .circulo {
