--- a/public/css/ventilador.css
+++ b/public/css/ventilador.css
@@ -6,7 +6,18 @@ body {
     margin: 0;
     background: linear-gradient(135deg, #2C3E50, #4CA1AF);
 }
+nav.navbar {
+    background: linear-gradient(135deg, #0F2027, #203A43, #2C5364); /* Negro a azul oscuro */
+}
 
+/* Links de navegación */
+.navbar .nav-link {
+    color: #BDC3C7; /* Gris claro */
+}
+
+.navbar .nav-link:hover {
+    color: #2980B9; /* Azul profundo */
+}   
 .remote-control {
     background-color: #E0E0E0;
     width: 200px;
