--- a/public/css/userstyle.css
+++ b/public/css/userstyle.css
@@ -1,67 +1,9 @@
 body {
-    height: 100vh;
-    background: linear-gradient(135deg, #2C3E50, #4CA1AF); /* Azul marino a azul petróleo */
+    height: 150vh;   /* Azul marino a azul petróleo */
     color: #333333; /* Gris carbón para el texto */
 }
 
 /* Barra de navegación */
-nav.navbar {
-    background: linear-gradient(135deg, #0F2027, #203A43, #2C5364); /* Negro a azul oscuro */
-}
-
-/* Links de navegación */
-.navbar .nav-link {
-    color: #BDC3C7; /* Gris claro */
-}
-
-.navbar .nav-link:hover {
-    color: #2980B9; /* Azul profundo */
-}
-
-.circulo {
-    position: absolute;
-    border-radius: 50%;
-    background: rgba(255, 255, 255, 0.2);
-    animation: flotando 10s infinite ease-in-out;
-}
-
-.circulo:nth-child(1) {
-    width: 200px;
-    height: 200px;
-    top: 20%;
-    left: 10%;
-    animation-delay: 0s;
-}
-
-.circulo:nth-child(2) {
-    width: 150px;
-    height: 150px;
-    top: 70%;
-    left: 30%;
-    animation-delay: 2s;
-}
-
-.circulo:nth-child(3) {
-    width: 300px;
-    height: 300px;
-    top: 40%;
-    right: 10%;
-    animation-delay: 4s;
-}
-
-.circulo:nth-child(4) {
-    width: 100px;
-    height: 100px;
-    bottom: 15%;
-    right: 40%;
-    animation-delay: 6s;
-}
-@keyframes flotando{0%, 100% {
-    transform: translateY(0) translateX(0);
-}
-50% {
-    transform: translateY(-50px) translateX(50px);
-}}
 
 .form-container {
     background: rgba(211, 64, 64, 0.849); /* Fondo blanco rojizo */
@@ -174,36 +116,22 @@ nav.navbar {
     transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
 }
 
+.actions-header {
+    width: 150px;
+}
 
-table {
-    min-width: 700px;
-    border-collapse: collapse;
-    margin: 0 auto;
-    border:2px solid #2C3E50;
-    border-radius: 12px;
-    background-color: #4CA1AF;
-    color: #000000;
-  }
+.table-responsive {
+    overflow-x: auto;
+}
 
-  td,tr,th {
-    border: 1px solid #2C3E50;
-    padding: 10px;
-    text-align: center;
-    font-size: 20px;
-  }
-  .acciones{
-    text-align: center;
-    margin: 0 auto;
-    margin-bottom: 33px;
-    
-  }
-  .acciones button {
-    font-size: 18px;
-    padding: 15px 30px;
-  }
+.mt-5 {
+    margin-top: 3rem !important;
+}
 
-  h1{
-    text-align: center;
-    margin-bottom: 37px;
-    
-  }
+.pt-5 {
+    padding-top: 3rem !important;
+}
+
+
+
+
