--- a/public/css/form.css
+++ b/public/css/form.css
@@ -1,88 +1,117 @@
-body { /* Azul marino a azul petróleo */
-    color: #000000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh; /* Altura completa de la ventana */
-    margin: 0;
-    font-family: Arial, sans-serif;
-
-    background-color: rgb(207, 226, 255); /* Color de fondo suave */
-    }
-
-    
-.form-container {
-    background: #4CA1AF;; /* Fondo blanco rojizo */
-    padding: 40px; /* Más padding para un diseño espacioso */
-    border-radius: 12px; /* Bordes más redondeados */
-    box-shadow: 0 12px 30px rgba(0, 0, 0, 0.3); /* Sombra más pronunciada */
-    width: 500px; /* Ajuste del ancho */
-    border: 2px solid #2C3E50; /* Borde suave */
-}
-
-.mb-3 input {
-    width: 100%; /* Ocupa el ancho completo */
-    padding: 14px; /* Más espaciado interno */
-    margin: 15px 0; /* Mayor espaciado entre elementos */
-    border: 1px solid #bbb; /* Borde gris claro */
-    background: rgba(255, 255, 255, .1); /* Fondo translúcido */
-    border-radius: 6px; /* Bordes más redondeados */
-    font-size: 16px; /* Tamaño de fuente */
-    box-sizing: border-box; /* Asegura que el padding no afecte el tamaño total */
-    transition: border-color 0.3s ease; /* Transición suave del borde */
-    color: #333; /* Color del texto */
-}
-
-.mb-3 input:focus {
-    border-color: #888; /* Cambio de color de borde al enfocar */
-    outline: none; /* Quitar borde por defecto */
-}
-
-
-.mb-3 input[type="submit"] {
-    width: 100%; /* El botón ocupa el mismo ancho que los campos */
-    padding: 14px; /* Espaciado interno */
-    margin: 15px 0; /* Espaciado entre elementos */
-    background-color: #2C3E50; /* Color rojo más fuerte */
-    color: #ffffff; /* Texto blanco */
-    border: none; /* Sin borde */
-    border-radius: 6px; /* Bordes redondeados */
-    font-size: 16px; /* Tamaño de fuente */
-    cursor: pointer; /* Cambiar cursor */
-    transition: background-color 0.3s ease; /* Transición suave del color */
-}
-
-.mb-3 input[type="submit"]:hover {
-    background-color: #2d5e8f; /* Color rojo más oscuro al pasar el mouse */
-}
-
-.textos {
-    font-size: larger;
-    font-weight: 600;
-}
-
-.titulo-form {
-    padding-bottom: 20px;
-    font-size: 24px;
-    font-weight: bold;
+*, *:before, *:after {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+  }
+  
+  body {
+    font-family: 'Nunito', sans-serif;
+    color: #384047;
+  }
+  
+  form {
+    max-width: 300px;
+    margin: 180px auto;
+    padding: 10px 20px;
+    background: #f4f7f8;
+    border-radius: 8px;
+  }
+  
+  h1 {
+    margin: 0 0 30px 0;
     text-align: center;
-    
-}
-
-.mb-3 select {
-    width: 100%; /* Ocupa el ancho completo */
-    padding: 14px; /* Más espaciado interno */
-    margin: 15px 0; /* Mayor espaciado entre elementos */
-    border: 1px solid #bbb; /* Borde gris claro */
-    background: rgba(255, 255, 255, .1); /* Fondo translúcido */
-    border-radius: 6px; /* Bordes más redondeados */
-    font-size: 16px; /* Tamaño de fuente */
-    box-sizing: border-box; /* Asegura que el padding no afecte el tamaño total */
-    transition: border-color 0.3s ease; /* Transición suave del borde */
-    color: #333; /* Color del texto */
-}
-
-.mb-3 select:focus {
-    border-color: #888; /* Cambio de color de borde al enfocar */
-    outline: none; /* Quitar borde por defecto */
-}
+  }
+  
+  input[type="text"],
+  input[type="password"],
+  input[type="date"],
+  input[type="datetime"],
+  input[type="email"],
+  input[type="number"],
+  input[type="search"],
+  input[type="tel"],
+  input[type="time"],
+  input[type="url"],
+  textarea,
+  select {
+    background: rgba(255,255,255,0.1);
+    border: none;
+    font-size: 16px;
+    height: auto;
+    margin: 0;
+    outline: 0;
+    padding: 15px;
+    width: 100%;
+    background-color: #e8eeef;
+    color: #8a97a0;
+    box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
+    margin-bottom: 30px;
+  }
+  
+  input[type="radio"],
+  input[type="checkbox"] {
+    margin: 0 4px 8px 0;
+  }
+  
+  select {
+    padding: 6px;
+    height: 32px;
+    border-radius: 2px;
+  }
+  
+  button {
+    padding: 19px 39px 18px 39px;
+    color: #FFF;
+    background-color: #4bc970;
+    font-size: 18px;
+    text-align: center;
+    font-style: normal;
+    border-radius: 5px;
+    width: 100%;
+    border: 1px solid #3ac162;
+    border-width: 1px 1px 3px;
+    box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset;
+    margin-bottom: 10px;
+  }
+  
+  fieldset {
+    margin-bottom: 30px;
+    border: none;
+  }
+  
+  legend {
+    font-size: 1.4em;
+    margin-bottom: 10px;
+  }
+  
+  label {
+    display: block;
+    margin-bottom: 8px;
+  }
+  
+  label.light {
+    font-weight: 300;
+    display: inline;
+  }
+  
+  .number {
+    background-color: #5fcf80;
+    color: #fff;
+    height: 30px;
+    width: 30px;
+    display: inline-block;
+    font-size: 0.8em;
+    margin-right: 4px;
+    line-height: 30px;
+    text-align: center;
+    text-shadow: 0 1px 0 rgba(255,255,255,0.2);
+    border-radius: 100%;
+  }
+  
+  @media screen and (min-width: 480px) {
+  
+    form {
+      max-width: 480px;
+    }
+  
+  }
